Fixed theme issue in dark mode

--- a/Documentation/.vitepress/theme/custom.css
+++ b/Documentation/.vitepress/theme/custom.css
@@ -18,4 +18,5 @@ html.dark {
     --vp-code-bg-color: #1e1e32;
     --vp-c-black-mute: #1e1e32;
     --vp-c-black: #1e1e32;
+    --vp-c-bg-soft: #1e1e32;
 }
